--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,16 @@
 [tool.poetry]
 name = "t2-yada"
-version = "1.2.1"
+version = "1.2.2"
 description = "Yet another dataclass argparse"
 authors = ["Binh Vu <binh@toan2.com>"]
 license = "MIT"
 readme = "README.md"
-packages = [
-    {include = "yada"}
-]
+packages = [{ include = "yada" }]
 repository = "https://github.com/binh-vu/yada"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-loguru = "^0.6.0"
+loguru = "^0.7.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
